fest: fixed input overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,7 @@ input[type=text] {
     border: 3px solid #555;
     padding: 8px 8px;
     border-radius: 5px;
+    width: 80%;
   }
 
 button{
